--- a/usermanagement/src/main/resources/messages.properties
+++ b/usermanagement/src/main/resources/messages.properties
@@ -22,3 +22,4 @@ EditPanel.date_of_birth=Birthday
 EditPanel.ok=Ok
 EditPanel.cancel=Cancel
 EditPanel.error_title=Error
+BrowsePanel.confirmDeleteAction=Do you really want to delete selected user:
